--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/swagger": "^7.1.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mongodb": "^5.8.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
